refactor UserDTO and UserService to use LocalDate for date fields and introduce UserMapper for DTO-Entity conversions